// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Flex Component correctly 1`] = `
<div
  className="sc-dxgOiQ EktRl"
  rows="4rem 20rem"
>
  <div
    className="sc-ckVGcZ bRJYGY"
  >
    <div
      className="sc-jKJlTe jdahHx"
    >
      Header
    </div>
  </div>
  <div
    className="sc-ckVGcZ hDfOnL"
  >
    <div
      className="sc-jKJlTe jdahHx"
    >
      Sidebar
    </div>
  </div>
  <div
    className="sc-ckVGcZ jGBzMn"
  >
    <div
      className="sc-jKJlTe jdahHx"
    >
      Body
    </div>
  </div>
</div>
`;

exports[`renders the Flex Component correctly 2`] = `
<div
  className="sc-dxgOiQ cGFBBV"
  rows="4rem 20rem"
>
  <div
    className="sc-ckVGcZ bRJYGY"
  >
    <div
      className="sc-jKJlTe jdahHx"
    >
      Header
    </div>
  </div>
  <div
    className="sc-ckVGcZ hDfOnL"
  >
    <div
      className="sc-jKJlTe jdahHx"
    >
      Sidebar
    </div>
  </div>
  <div
    className="sc-ckVGcZ jGBzMn"
  >
    <div
      className="sc-jKJlTe jdahHx"
    >
      Body
    </div>
  </div>
</div>
`;
